<resources>
    <!-- 로그인 화면 -->
    <string name="app_name">Abroady</string>
    <string name="welcome_back">Welcome back</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_your_account">Create your account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="select_login">Continue with social media</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_description_title">Log in to see more</string>
    <string name="login_description_content">Abroady is waiting for you with various articles.</string>

    <!-- login error dialog -->
    <string name="error">Error</string>
    <string name="login_error_message">The email address or password you entered is incorrect.</string>
    <string name="accept">OK</string>

    <!-- forgot password -->
    <string name="forgot_password_enter_email">Enter the email address associated with your account.</string>
    <string name="find_password_via_email">You will receive a link to reset your password via email.</string>
    <string name="link_expire_info">Please note that the link will expire in 24 hours.</string>
    <string name="send">Send</string>
    <string name="back_to_login">Back to log in</string>

    <!-- forgot password dialog -->
    <string name="invalid_email">"You have entered an invalid email address."</string>
    <string name="not_exist_email">The email address you entered doesn\'t belong to an account.</string>

    <!-- terms of service -->
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms_of_service_description">In order to start using Abroady,\nPlease agree to our Terms &amp; Conditions first.</string>
    <string name="accept_all">Accept all</string>
    <string name="required">[Required]</string>
    <string name="terms_conditions">Consent to terms and conditions</string>
    <string name="collect_use_personal_information">Consent to collect and use personal information</string>
    <string name="continue_sign_up">Continue</string>


    <!-- community 화면 string -->
    <string name="community">Community</string>
    <string name="my_party">My Party</string>
    <string name="hot">Hot</string>
    <string name="see_boards">See boards</string>
    <string name="now_trending">Now Trending</string>
    <string name="hot_board">Hot Board</string>
    <string name="more">more</string>
    <string name="line">───────────────────────────────</string>
    <string name="title_activity_write_post">WritePostActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Board, Post 관련 화면 string -->
    <string name="write">Write</string>
    <string name="done">Done</string>
    <string name="choose_board">Choose board</string>
    <string name="title">Title</string>
    <string name="fill_the_content">Fill the content.</string>
    <string name="anonymous">Anonymous</string>
    <string name="boards">Boards</string>
    <string name="make_new_board">Make new board</string>
    <string name="my_boards">My boards</string>
    <string name="recommended">Recommended</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="search_boards">Search boards</string>
    <string name="cancel">Cancel</string>
    <string name="not_found_any_board">Isn\'t there any board you are looking for?</string>
    <string name="search_post">Title, text, hashtag</string>
    <string name="search_post_description">Search posts in this board</string>
    <string name="new_board">New Board</string>
    <string name="board_name">Board name</string>
    <string name="board_name_description">Enter name for a new board.</string>
    <string name="board_description">Description</string>
    <string name="new_board_description">Enter a description for this board.</string>

    <!-- Party 화면 string -->
    <string name="party">Party</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="see_participants">See participants</string>
    <string name="participate">Participate</string>
    <string name="default_comment">Default</string>
    <string name="recent_comment">Recent</string>
    <string name="send_message">Send Message</string>
    <string name="report">Report</string>
    <string name="block_this_user">Block this user</string>

</resources>