<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_forgot_password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:text="@string/forgot_password"
                android:textColor="@color/letter"
                android:textSize="@dimen/dimen25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin150"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forgot_password_enter_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/forgot_password_enter_email"
                android:textColor="@color/letter"
                android:textSize="@dimen/dimen13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />

            <TextView
                android:id="@+id/find_password_via_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/find_password_via_email"
                android:textColor="@color/letter"
                android:textSize="@dimen/dimen13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin3"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_enter_email" />

            <TextView
                android:id="@+id/link_expire_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/link_expire_info"
                android:textColor="@color/letter"
                android:textSize="@dimen/dimen13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin15"
                app:layout_constraintTop_toBottomOf="@+id/find_password_via_email" />

            <RelativeLayout
                android:id="@+id/input_email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin40"
                android:background="@drawable/button_square_default"
                android:padding="@dimen/margin5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_expire_info">

                <EditText
                    android:id="@+id/input_email_text"
                    android:layout_width="@dimen/margin270"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin10"
                    android:background="@null"
                    android:fontFamily="@font/notosanskr_regular"
                    android:hint="@string/user_email"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textSize="@dimen/dimen13" />

            </RelativeLayout>

            <TextView
                android:id="@+id/email_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/button_square_colored_light"
                android:fontFamily="@font/notosanskr_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email_layout" />

            <TextView
                android:id="@+id/back_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:text="@string/back_to_login"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/dimen12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_send_button"
                android:layout_marginTop="@dimen/margin230"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



</layout>