<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_root"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:textColor="@color/letter"
            android:textSize="@dimen/dimen17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/error" />

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/margin5"
            android:textColor="@color/letter"
            android:textSize="@dimen/dimen13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            tools:text="@string/not_exist_email" />

        <ImageView
            android:id="@+id/dialog_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:src="@drawable/dialog_line"
            app:layout_constraintTop_toBottomOf="@+id/dialog_content" />

        <LinearLayout
            android:id="@+id/dialog_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_horizontal_line">

            <TextView
                android:id="@+id/left_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/notosanskr_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/dimen17"
                tools:text="@string/cancel" />

            <ImageView
                android:id="@+id/right_button"
                android:layout_width="@dimen/margin1"
                android:layout_height="@dimen/dialog_line_vertical_height"
                android:scaleType="centerCrop"
                android:src="@drawable/dialog_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/notosanskr_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/dimen17"
                tools:text="@string/sign_up" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>